LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/Loyalty_Program__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>