LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>TODAY() &gt;= Program_Start_Date__c  &amp;&amp; TODAY() &lt;= Program_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>