LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Program</fullName>
            </value>
            <value>
                <fullName>Hybrid Program</fullName>
            </value>
            <value>
                <fullName>Paid Program</fullName>
            </value>
            <value>
                <fullName>Partnered Program</fullName>
            </value>
            <value>
                <fullName>Point Program</fullName>
            </value>
            <value>
                <fullName>Spend Program</fullName>
            </value>
            <value>
                <fullName>Tiered Program</fullName>
            </value>
            <value>
                <fullName>Value Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>