LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Card_Program.recordType-meta.xml
<RecordType>
    <fullName>Card_Program</fullName>
    <active>true</active>
    <description>Card program that incentive consume and allows gather consumers data</description>
    <label>Card Program</label>
</RecordType>