LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Hybrid_Program.recordType-meta.xml
<RecordType>
    <fullName>Hybrid_Program</fullName>
    <active>true</active>
    <description>Combination of more than one type of loyalty programs</description>
    <label>Hybrid Program</label>
</RecordType>