LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Paid_Program.recordType-meta.xml
<RecordType>
    <fullName>Paid_Program</fullName>
    <active>true</active>
    <description>Paided fee member type program</description>
    <label>Paid Program</label>
</RecordType>