LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Partnered_Program.recordType-meta.xml
<RecordType>
    <fullName>Partnered_Program</fullName>
    <active>true</active>
    <description>Create partnerships type of program</description>
    <label>Partnered Program</label>
</RecordType>