LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Point_Program.recordType-meta.xml
<RecordType>
    <fullName>Point_Program</fullName>
    <active>true</active>
    <description>Spend more to get more based program</description>
    <label>Point Program</label>
</RecordType>