LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Spend_Program.recordType-meta.xml
<RecordType>
    <fullName>Spend_Program</fullName>
    <active>true</active>
    <description>Spend to get loyalty credits program</description>
    <label>Spend Program</label>
</RecordType>