LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Tiered_Program.recordType-meta.xml
<RecordType>
    <fullName>Tiered_Program</fullName>
    <active>true</active>
    <description>Tiered levels type program</description>
    <label>Tiered Program</label>
</RecordType>