LoyaltyApp/force-app/main/default/objects/Loyalty_Program__c/recordTypes/Value_Program.recordType-meta.xml
<RecordType>
    <fullName>Value_Program</fullName>
    <active>true</active>
    <description>Create value with customers based program</description>
    <label>Value Program</label>
</RecordType>